fix some code smells